--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -72,3 +72,39 @@ textarea {
     background: #002855;
     border-bottom: #5dbb46 solid 10px;
 }
+#mode {
+    width: 13%;
+}
+#address2 {
+    width: 32%;
+}
+
+#city {
+    width: 16%;
+}
+#zip {
+    width: 11%;
+}
+
+#email {
+    width: 4%;
+}
+
+#npi {
+    width: 7%;
+}
+
+#form1,#form2 {
+    margin-top: -27px
+}
+
+.cards {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+    text-align: left;
+}
+
+.cards:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
