working on the final touches of the request form.  Still haven't worked out the std address or NPI checks.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -110,7 +110,8 @@
                                     <span class="input-group-text">Dental Group</span>
                                 </div>
                                 <select type="text" class="form-control" id="dGroup" th:field="*{DGroup}">
-
+                                    <option class="p-2" th:each="l : ${dentalGroups}" th:value="${l.value1}"
+                                            th:text="${l.value1}"></option>
                                 </select>
                                 <div class="input-group-prepend" id="pName2">
                                     <span class="input-group-text">Practice Name</span>
@@ -147,8 +148,7 @@
                                     <span class="input-group-text">State</span>
                                 </div>
                                 <select type="text" class="form-control" id="state" th:field="*{state}">
-                                    <option class="p-2" th:each="l : ${state}" th:value="${l.labName}"
-                                            th:text="${l.labName}"></option>
+
                                 </select>
                                 <div class="input-group-prepend" id="zip2">
                                     <span class="input-group-text">Zip</span>
