working on the final touches of the request form.  Still haven't worked out the std address or NPI checks.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -110,6 +110,7 @@
                                     <span class="input-group-text">Dental Group</span>
                                 </div>
                                 <select type="text" class="form-control" id="dGroup" th:field="*{DGroup}">
+                                    <option class="p-2" value=""></option>
                                     <option class="p-2" th:each="l : ${dentalGroups}" th:value="${l.value1}"
                                             th:text="${l.value1}"></option>
                                 </select>
