Finished the backend code for the checks, excluding master accounts.  Working through making the front end code and display work well.

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -43,7 +43,7 @@
 <div class="error-template mt-5 text-center">
      <div class="card error-card bg-white">
          <div class="card-header ndx-header bg-blue nav-bottom-green p-3">
-              <h4>Ndx Validate</h4>
+              <h4>CAVE</h4>
          </div>
          <div class="card-body">
              <div class="text-center">
