--- a/src/main/resources/templates/no_access.html
+++ b/src/main/resources/templates/no_access.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta  http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>Ndx Validate</title>
+    <title>CAVE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
@@ -45,7 +45,7 @@
     <div class="error-template mt-5 text-center">
         <div class="card error-card bg-white">
             <div class="card-header ndx-header bg-blue nav-bottom-green p-3">
-                <h4>Ndx Validate</h4>
+                <h4>CAVE</h4>
             </div>
             <div class="card-body">
                 <div class="text-center">
