--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,19 +6,25 @@
     border-bottom: #5dbb46 solid 10px;
 }
 
-.ndx-header{
+.ndx-header {
     border-radius: 0;
 }
 
-.ndx-btn-color{
+.ndx-btn-color {
     background-color: #002855;
     color: #5dbb46;
+    margin-left: 4px;
+    border-radius: 5px;
+}
+
+.btn-group > .btn-group:not(:last-child) > .btn, .btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
+    border-radius: 5px;
 }
 
 .ndx-btn-color a,
 .ndx-btn-color a:hover,
 .ndx-btn-color a:active,
-.ndx-btn-color a:visited{
+.ndx-btn-color a:visited {
     color: #5dbb46;
 }
 
@@ -67,44 +73,70 @@
 textarea {
     height: 38px;
 }
-
 .card-header.mb-3.ndx-header.bg-blue.nav-bottom-green {
     background: #002855;
     border-bottom: #5dbb46 solid 10px;
 }
+
 #mode {
     width: 13%;
 }
+
+#dashMode {
+    width: 10%;
+}
+
 #address2 {
     width: 32%;
 }
-
 #city {
     width: 16%;
 }
 #zip {
     width: 11%;
 }
-
 #email {
     width: 4%;
 }
-
 #npi {
     width: 7%;
 }
 
-#form1,#form2 {
+#form1, #form2 {
     margin-top: -27px
 }
 
-.cards {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+.cards, .webCards {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     width: 100%;
     text-align: left;
 }
 
 .cards:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#dash {
+    height: 64vh;
+    overflow-y: auto
+}
+
+#similarChoice, #webChoice {
+    height: 33vh;
+    overflow-y: auto;
+    margin-top: -16px;
+}
+
+#licenseNoError {
+    text-align: center;
+    padding-left: 175px;
+}
+
+#topColumn {
+    margin-bottom: -40px;
+}
+
+#bottomColumn {
+    margin-top: 2rem !important;
 }
