--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta  http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>Ndx Validate</title>
+    <title>CAVE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
@@ -42,18 +42,34 @@
     <div class="container">
         <section class="mt-5">
             <div class="request-sender mb-3">
-                <div class="float-right">
+                <div class="btn-group">
+
+
                     <div class="btn ndx-btn-color">
                         <a href="/request">Request Account</a>
                     </div>
+
+                    <div th:if="${admin != null }">
+
+
+                        <div class="btn ndx-btn-color">
+                            <a href="/lms">LMS Dashboard</a>
+                        </div>
+
+
+                    </div>
+
+
                 </div>
+
             </div>
+
             <div class="card bg-white">
                 <div class="card-header nav-bottom-green bg-blue ndx-header">
                     <h4>Account Request Queue</h4>
                 </div>
             </div>
-            <div class="container">
+            <div id='dash' class="container">
                 <table class="table">
                     <thead>
                     <tr>
@@ -62,7 +78,7 @@
                         <th scope="col">Lab Name</th>
                         <th scope="col">Mode</th>
                         <th scope="col">Doctor Name</th>
-                        <th scope="col">Practice Name </th>
+                        <th scope="col">Practice Name</th>
                         <th scope="col">State</th>
                         <th scope="col">NPI No</th>
                         <th scope="col">License No</th>
@@ -75,26 +91,24 @@
                         <td th:text="${s.mtUserName}"></td>
                         <td th:text="${#dates.format(s.timeStamp, 'yyyy/MM/dd : hh:mm a')}"></td>
                         <td th:text="${s.labName}"></td>
-                        <td th:text="${s.mode}"></td>
+                        <td id='dashMode' th:switch="${s.mode}">
+                            <span th:case="'0'">New Customer New Doctor</span>
+                            <span th:case="'1'">New Customer Old Doctor</span>
+                            <span th:case="'2'">Old Customer New Doctor</span>
+                        </td>
                         <td th:text="${s.FName} + ' ' + ${s.LName} "></td>
                         <td th:text="${s.PName}"></td>
                         <td th:text="${s.state}"></td>
                         <td th:text="${s.npi}"></td>
                         <td th:text="${s.licenseNo}"></td>
-                        <td > <span th:if="${s.status == 0}">Processing</span> </td>
-                        <td><h4 class="text-center color-green"><a href="/dashboard/edit_request.html" th:href="@{/edit_request/{id}(id=${s.accId})}" ><i class="far fa-edit"></i></a></h4></td>
+                        <td><span th:if="${s.status == 0}">Processing</span></td>
+                        <td><h4 class="text-center color-green"><a href="/dashboard/edit_request.html"
+                                                                   th:href="@{/edit_request/{id}(id=${s.accId})}"><i
+                                class="far fa-edit"></i></a></h4></td>
                     </tr>
                     </tbody>
                 </table>
-                <div th:if="${admin != null }">
-                    <div class="p-5">
-                        <div class="text-center">
-                            <div class="btn ndx-btn-color">
-                                <a href="/lms">LMS Dashboard</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
 
             </div>
         </section>
