--- a/src/main/resources/templates/edit_request.html
+++ b/src/main/resources/templates/edit_request.html
@@ -2,10 +2,15 @@
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta  http-equiv="Content-Type" content="text/html" charset="UTF-8">
+    <sec:csrfMetaTags/>
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <!-- default header name is X-CSRF-TOKEN -->
+    <meta name="_csrf_header" content="${_csrf.headerName}"/>
     <title>CAVE</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
@@ -14,7 +19,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-blue nav-bottom-green">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">CAVE</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -42,184 +48,200 @@
     </nav>
 </div>
 
-<div class="container">
-    <div class="card bg-white mt-5">
-        <div class="card-header mb-3 ndx-header bg-blue nav-bottom-green">
-            <h3>Edit your Request</h3>
+
+<div class="container-fluid">
+
+    <div class="row">
+        <div id="form1" class="col-lg-9">
+
+            <div class="card bg-white mt-5">
+                <div class="card-header mb-3 ndx-header bg-blue nav-bottom-green">
+                    <h3>Edit your Request</h3>
+                </div>
+                <div class="form-container m-2">
+
+                    <form id="updateRequest" method="post">
+
+                        <input type="hidden" id="requestId" th:value="${accRequest.accId}">
+
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Mode</span>
+                            </div>
+                            <select class="form-control" id="mode" th:field="${accRequest.mode}">
+                                <option value="0">New Customer New Doctor</option>
+                                <option value="1">New Customer Old Doctor</option>
+                                <option value="2">Old Customer New Doctor</option>
+                            </select>
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">LabName</span>
+                            </div>
+                            <select type="text" class="form-control" id="LabName" th:field="${accRequest.labName}">
+                                <option class="p-2" th:each="l : ${labUserPair}" th:value="${l.labName}"
+                                        th:text="${l.labName}"></option>
+                            </select>
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Lab Customer</span>
+                            </div>
+                            <select type="text" class="form-control" id="IsRush" th:field="*{accRequest.isRush}">
+                                <option value="YES">Yes</option>
+                                <option value="NO">No</option>
+                            </select>
+                            <div id="dhs1" class="input-group-prepend">
+                                <span class="input-group-text">Is DHS</span>
+                            </div>
+                            <select class="form-control" id="dhs" th:field="*{accRequest.dhs}">
+                                <option value="0">NO</option>
+                                <option value="1">Yes</option>
+                            </select>
+                        </div>
+
+                        <div id="hiddenRow" class="input-group mb-2">
+                            <div class="input-group-prepend" id="customerId2">
+                                <span class="input-group-text">Old Customer ID</span>
+                            </div>
+                            <input type="text" class="form-control" id="customerId" th:field="*{accRequest.customerId}">
+                            <div class="input-group-prepend" id="doctorId2">
+                                <span class="input-group-text">Old Doctor ID</span>
+                            </div>
+                            <input type="number" class="form-control" id="doctorId" th:field="*{accRequest.docId}">
+                        </div>
+
+                        <div id="dGroup1" class="input-group mb-2">
+                            <div class="input-group-prepend" id="dGroup2">
+                                <span class="input-group-text">Dental Group</span>
+                            </div>
+                            <select type="text" class="form-control" id="dGroup" th:field="*{accRequest.DGroup}">
+                                <option class="p-2" value=""></option>
+                                <option class="p-2" th:each="l : ${dentalGroups}" th:value="${l.value1}"
+                                        th:text="${l.value1}"></option>
+                            </select>
+                            <div class="input-group-prepend" id="pName2">
+                                <span class="input-group-text">Practice Name</span>
+                            </div>
+                            <input type="text" class="form-control" id="pName" th:field="*{accRequest.PName}">
+                        </div>
+
+                        <div id="address11" class="input-group mb-2">
+                            <div class="input-group-prepend" id="address12">
+                                <span class="input-group-text">Address1</span>
+                            </div>
+                            <input type="text" class="form-control" id="address1" th:field="*{accRequest.add1}">
+
+
+                        </div>
+
+
+                        <div class="input-group mb-2">
+                            <div class="input-group-prepend" id="address22">
+                                <span class="input-group-text">Address2</span>
+                            </div>
+                            <input type="text" class="form-control" id="address2" th:field="*{accRequest.add2}">
+                            <div class="input-group-prepend" id="city2">
+                                <span class="input-group-text">City</span>
+                            </div>
+                            <input type="text" class="form-control" id="city" th:field="*{accRequest.city}">
+                            <div class="input-group-prepend" id="state2">
+                                <span class="input-group-text">State</span>
+                            </div>
+                            <select type="text" class="form-control" id="state" th:field="*{accRequest.state}">
+                                <option class='p-2' id="OGState" th:value="*{accRequest.state}"></option>
+                            </select>
+                            <div class="input-group-prepend" id="zip2">
+                                <span class="input-group-text">Zip</span>
+                            </div>
+                            <input type="text" class="form-control" id="zip" th:field="*{accRequest.zip}">
+                        </div>
+
+
+                        <div id="licenseNo1" class="input-group mb-2">
+                            <div class="input-group-prepend" id="npi2">
+                                <span class="input-group-text">NPI Number</span>
+                            </div>
+                            <input type="number" class="form-control" id="npi" th:field="*{accRequest.npi}">
+                            <div class="input-group-prepend" id="licenseNo2">
+                                <span class="input-group-text">Doctor License Number</span>
+                            </div>
+                            <input type="text" class="form-control" id="licenseNo" th:field="*{accRequest.licenseNo}">
+                            <div class="input-group-append">
+                                <span style='font-size:25px;' id="goodLicense">&#9989</span>
+                            </div>
+
+                        </div>
+
+                        <div id="licenseNoError">
+
+                        </div>
+
+
+                        <div id="fName1" class="input-group mb-2">
+                            <div class="input-group-prepend" id="fName2">
+                                <span class="input-group-text">Doctor First Name</span>
+                            </div>
+                            <input type="text" class="form-control" id="fName" th:field="*{accRequest.FName}">
+                            <div class="input-group-prepend" id="lName2">
+                                <span class="input-group-text">Doctor Last Name</span>
+                            </div>
+                            <input type="text" class="form-control" id="lName" th:field="*{accRequest.LName}">
+                        </div>
+
+
+                        <div id="email1" class="input-group mb-2">
+                            <div class="input-group-prepend" id="email2">
+                                <span class="input-group-text">Email</span>
+                            </div>
+                            <input type="text" class="form-control" id="email" th:field="*{accRequest.email}">
+                            <div class="input-group-prepend" id="phone2">
+                                <span class="input-group-text">Phone</span>
+                            </div>
+                            <input type="text" class="form-control" id="phone" th:field="*{accRequest.phone}">
+                        </div>
+
+
+                        <div id="labNote1" class="input-group mb-2">
+                            <div class="input-group-prepend" id="labNote2">
+                                <span class="input-group-text">Add Note</span>
+                            </div>
+                            <textarea autocomplete="on" autocorrect="on" type="text" class="form-control" id="labNote"
+                                      th:field="*{accRequest.notes}"> </textarea>
+                        </div>
+
+
+                        <input id="submitForm" type="submit" value="Submit">
+
+                    </form>
+                </div>
+
+            </div>
         </div>
-        <div class="form-container m-2" >
 
-            <form id="updateRequest"  method="post" >
-
-                <input type="hidden" id="requestId"  th:value="${accRequest.accId}" >
-                <label for="LabName" class="form-label">Lab Name</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"  id="LabName" th:value="${accRequest.labName}">
+        <div id="form2" class="col-lg-3">
+            <div class="card mt-5 bg-white">
+                <div class="card-header mb-3 ndx-header bg-blue nav-bottom-green">
+                    <h5>Existing Choices</h5>
                 </div>
+                <div id="similarChoice">
 
-
-                <label for="mode">Mode</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="mode" th:value="${accRequest.mode}">
                 </div>
+            </div>
 
-                <label for="IsRush">Is Rush</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="IsRush" th:value="${accRequest.isRush}">
-                </div>
-
-                <label for="doctorId">Old Doctor ID</label>
-                <div class="input-group mb-5">
-                    <input type="text" class="form-control"   id="doctorId" th:value="${accRequest.docId}">
-                </div>
-
-
-                <label for="customerId">Old Customer ID</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="customerId" th:value="${accRequest.customerId}">
-                </div>
-
-                <label for="address0">Address1</label>
-                <div class="input-group mb-5">
-                    <input type="text" class="form-control"   id="address0" th:value="${accRequest.add1}">
-                </div>
-
-                <label for="address1">Address2</label>
-                <div class="input-group mb-5">
-                    <input type="text" class="form-control"   id="address1" th:value="${accRequest.add2}">
-                </div>
-
-
-                <label for="city">City</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="city" th:value="${accRequest.city}">
-                </div>
-
-                <label for="state">State</label>
-                <div class="input-group mb-5">
-                    <input type="text" class="form-control"   id="state" th:value="${accRequest.state}">
-                </div>
-
-                <label for="zip">Zip</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="zip" th:value="${accRequest.zip}">
-                </div>
-
-
-                <label for="fName">Doctor First Name</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="fName" th:value="${accRequest.FName}">
-                </div>
-
-                <label for="lName">Doctor Last Name</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="lName" th:value="${accRequest.LName}">
-                </div>
-
-                <label for="email">Email</label>
-                <div class="input-group mb-5">
-                    <input type="text" class="form-control"   id="email" th:value="${accRequest.email}">
-                </div>
-
-                <label for="phone">Phone</label>
-                <div class="input-group mb-5">
-                    <input type="text" class="form-control"   id="phone" th:value="${accRequest.phone}">
-                </div>
-
-                <label for="licenseNo">Doctor License Number</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="licenseNo" th:value="${accRequest.licenseNo}">
-                </div>
-
-
-                <label for="npi">NPI Number</label>
-                <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="npi" th:value="${accRequest.npi}">
-                </div>
-
-                <label for="labNote">Add Note</label>
-                <div class="input-group mb-5">
-                    <textarea type="text" class="form-control"   id="labNote" th:value="${accRequest.notes}"> </textarea>
-                </div>
-
-                <input id="submitForm"  type="submit" value="Submit">
-
-            </form>
         </div>
-
     </div>
-
 
 </div>
 
 
 </body>
-<footer >
+<footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/2effb491bc.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/edit.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
-    <script type="text/javascript">
-        const contextpath = /*[[@{/}]]*/ "/";
-        let csrfHeaderName = "[[${_csrf.headerName}]]";
-        let csrfValue = "[[${_csrf.token}]]";
-    </script>
-
-    <script type="text/javascript">
-        $(document).ready(function (){
-            $("#updateRequest").submit(function (event){
-                event.preventDefault();
-                ajaxPost();
-            });
-
-            function ajaxPost(){
-                let formData = {
-                    labName: $("#LabName").val(),
-                    mode: $("#mode").val(),
-                    isRush: $("#isRush").val(),
-                    docId: $("#doctorId").val(),
-                    customerId: $("#customerId").val(),
-                    add1: $("#address0").val(),
-                    add2: $("#address1").val(),
-                    city: $("#city").val(),
-                    state: $("#state").val(),
-                    zip: $("#zip").val(),
-                    fname: $("#fName").val(),
-                    lname: $("#lName").val(),
-                    email: $("#email").val(),
-                    phone: $("#phone").val(),
-                    licencsNo: $("#licenseNo").val(),
-                    npi: $("#npi").val(),
-                    notes: $("#notes").val()
 
 
-                };
-
-                let requestId = $("#requestId").val();
-                let url = contextpath + "api/request/update/"+requestId;
-
-                $.ajax({
-                    type : "POST",
-                    contentType : "application/json",
-                    url : url,
-                    beforeSend: function(xhr){
-                        xhr.setRequestHeader(csrfHeaderName, csrfValue);
-                    },
-                    data : JSON.stringify(formData),
-                    dataType : 'json',
-                    success : function (response){
-                        window.location.assign("http://localhost:8080/dashboard");
-                        console.log(response);
-                    },
-                    error: function (e){
-                        console.log("Error: ", e);
-                        console.log("data: ", JSON.stringify(formData))
-                        window.location.assign("http://localhost:8080/dashboard");
-                    }
-
-                });
-            }
-        })
     </script>
 </footer>
 </html>
