--- a/src/main/resources/templates/view_request_processed.html
+++ b/src/main/resources/templates/view_request_processed.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta  http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>Ndx Validate</title>
+    <title>CAVE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
@@ -57,11 +57,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                       <td> Facility ID</td>
+                        <td>Facility ID</td>
                         <td th:text="${accountRequest.labName}"></td>
                     </tr>
                     <tr>
-                        <td > Same Day Rush</td>
+                        <td>Lab Customer</td>
                         <td th:text="${accountRequest.isRush}"></td>
                     </tr>
                     <tr>
