Finished the backend code for the checks, excluding master accounts.  Working through making the front end code and display work well.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -122,8 +122,14 @@ textarea {
     overflow-y: auto
 }
 
-#similarChoice, #webChoice {
-    height: 33vh;
+#similarChoice {
+    height: 48vh;
+    overflow-y: auto;
+    margin-top: -16px;
+}
+
+#webChoice {
+    height: 18vh;
     overflow-y: auto;
     margin-top: -16px;
 }
