--- a/src/main/resources/templates/edit_request.html
+++ b/src/main/resources/templates/edit_request.html
@@ -216,15 +216,23 @@
         </div>
 
         <div id="form2" class="col-lg-3">
-            <div class="card mt-5 bg-white">
+            <div id="topColumn" class="card mt-5 bg-white">
                 <div class="card-header mb-3 ndx-header bg-blue nav-bottom-green">
-                    <h5>Existing Choices</h5>
+                    <h5 id='checks'>Checking the Database</h5>
                 </div>
                 <div id="similarChoice">
 
                 </div>
             </div>
 
+            <div id="bottomColumn" class="card mt-5 bg-white">
+                <div class="card-header mb-3 ndx-header bg-blue nav-bottom-green">
+                    <h5 id='webChecks'>Checking the Web</h5>
+                </div>
+                <div id="webChoice">
+
+                </div>
+            </div>
         </div>
     </div>
 
