--- a/src/main/resources/templates/process.html
+++ b/src/main/resources/templates/process.html
@@ -83,8 +83,8 @@
                                 <span class="input-group-text">Is DHS</span>
                             </div>
                             <select class="form-control" id="dhs" th:field="*{accRequest.dhs}">
-                                <option value="0">NO</option>
-                                <option value="1">Yes</option>
+                                <option value="0">0</option>
+                                <option value="1">1</option>
                             </select>
                         </div>
 
